# Asteroid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  credits.txt  resource.h
assets/: AsteroidGame.aps
include/: AssetManager.h  Asteroid.h  Asteroid.hpp  Audio.hpp  BaseEntity.hpp  BaseGameState.h  BaseGameState.hpp  Bullet.h  Bullet.hpp  BulletPool.h  BulletPool.hpp  Button.h  Button.hpp  EntityManager.h  EntityManager.hpp  FileReadWrite.hpp  Game.h  Game.hpp  GameGameState.h  GameGameState.hpp  GameOverGameState.h  GameOverGameState.hpp  GameStateMachine.h  GameStateMachine.hpp  MainMenuGameState.h  MainMenuGameState.hpp  Music.hpp  Player.h  Player.hpp  Popup.hpp  SettingData.hpp  SettingsData.hpp  SettingsGameState.hpp  Slider.hpp  Sprite.h  Sprite.hpp  Text.hpp  Trail.h
plugins/boost_1_85_0/bin.v2/standalone/msvc/msvc-14.3/: msvc-setup.bat
plugins/boost_1_85_0/bin.v2/standalone/msvc/msvc-14.3/address-model-32/architecture-x86/: msvc-setup.bat
src/: AssetManager.cpp  Asteroid.cpp  Audio.cpp  BaseEntity.cpp  BaseGameState.cpp  BaseState.h  Bullet.cpp  BulletPool.cpp  Button.cpp  EntityManager.cpp  FileReadWrite.cpp  Game.cpp  GameGameState.cpp  GameOverGameState.cpp  GameStateMachine.cpp  GameStateMachine.h  MainMenuGameState.cpp  Music.cpp  Player.cpp  Popup.cpp  SettingsGameState.cpp  Slider.cpp  Sprite.cpp  Text.cpp  Trail.cpp  main.cpp
